<resources>
    <string name="app_name">Poopd!</string>
    <string name="here_you_can_add_your_shit">Here you can add your poop!</string>
    <string name="add_your_poop">Here you can add your poop!</string>
    <string name="done">Blast away!</string>
    <string name="name_of_place">Poop name:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="how_to_use">How to use</string>
    <string name="most_poops_in_country">Most poops in country</string>
    <string name="how_many_poops_total">How many poops you have logged:</string>
    <string name="how_to_use_informal">You can use this app to save your poop to a map so you can see where you have taken a poop. You can also add rating to cleanness, privacy and overall. You can even add a name and a note. To add a poop use the button in bottom middle part of the screen. If you dont see the button, you need to enable location services in the application settings page, or you can press "App info" in the menubar in the top left corner.</string>
    <string name="how_to_use_activity">How to use</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_application">The application is a part time project by a software engineer student at HiOA. The project is open-source and is hosted on my Github page.</string>
    <string name="have_any_feedback">Click here to send feedback to developer</string>
    <string name="rating_of_place_privacy">Rating privacy:</string>
    <string name="rating_of_place_overall">Rating overall:</string>
    <string name="rating_of_place_cleanness">Rating cleanness:</string>
    <string name="add_poop_note">Poop note:</string>
    <string name="more_coming_soon">More coming soon!</string>
    <string name="app_info">App info</string>
    <string name="add_new_poop">Add new poop</string>
    <string name="add_poop">Add my new poop</string>
    <string name="no_poop">None :(</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="location_latitude">Poop latitude:</string>
    <string name="location_longitude">Poop longitude:</string>
    <string name="poop_details">Details</string>
    <string name="poop_date">Poop date:</string>
    <string name="poop_time">Poop time:</string>
    <string name="edit_location">Adjust location</string>
    <string name="title_activity_edit_location">EditLocationMap</string>
    <string name="edit_poop_location">Adjust poop location</string>
    <string name="help">Help</string>
    <string name="header_other">Other</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="no_location">Cannot detect location</string>
    <string name="source_code">Source code</string>
    <string name="see_source_code">See source code on Github</string>
    <string name="url_github">https://github.com/larshaga/Poopd/</string>
    <string name="click_to_see_more">Click to see more</string>
    <string name="avg_rating">Avg rating:</string>
    <string name="no">No</string>
    <string name="sure_you_want_to_exit">Are you sure you want to exit the application?</string>
    <string name="yes">Yes</string>
    <string name="no_longer_able_to_add_poop">You will no longer be able to add new poops :(</string>
    <string name="need_location">The app need to know your location, or some functionality will be disabled</string>
    <string name="poop_deleted">Poop deleted</string>
    <string name="sure_you_want_to_delete">Are you sure you want to delete this poop?</string>
    <string name="title_versionName">Version Name</string>
    <string name="app_versionName">Version Name</string>
    <string name="app_versionCode">Version Code</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Lars \"Slider\"</string>
    <string name="error">An error accured</string>

</resources>
