<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailed_activity_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailedActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:text="@string/name_of_place"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editPoopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:text="@string/rating_of_place_cleanness"
        android:textStyle="bold"/>

    <RatingBar
        android:id="@+id/editPoopCleanness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:numStars="5"
        android:stepSize="0.5"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:text="@string/rating_of_place_privacy"
        android:textStyle="bold"/>

    <RatingBar
        android:id="@+id/editPoopPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:numStars="5"
        android:stepSize="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:text="@string/rating_of_place_overall"
        android:textStyle="bold"/>

    <RatingBar
        android:id="@+id/editPoopOverall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:numStars="5"
        android:stepSize="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:text="@string/add_poop_note"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editPoopNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1"
        android:inputType="text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_layout"
        android:layout_weight="1">

        <TextView
            android:id="@+id/poopDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poop_date"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textPoopDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/poopDate"
            android:layout_marginStart="@dimen/small_layout"
            android:layout_toEndOf="@id/poopDate"/>

        <TextView
            android:id="@+id/poopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poopDate"
            android:text="@string/poop_time"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textPoopTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/poopTime"
            android:layout_marginStart="@dimen/small_layout"
            android:layout_toEndOf="@id/poopTime"/>

        <TextView
            android:id="@+id/poopLocationLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poopTime"
            android:text="@string/location_latitude"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/poopLocationLatValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/poopLocationLat"
            android:layout_marginStart="@dimen/small_layout"
            android:layout_toEndOf="@id/poopLocationLat"/>

        <TextView
            android:id="@+id/poopLocationLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poopLocationLat"
            android:text="@string/location_longitude"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/poopLocationLonValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/poopLocationLon"
            android:layout_marginStart="@dimen/small_layout"
            android:layout_toEndOf="@id/poopLocationLon"/>

    </RelativeLayout>
</LinearLayout>
