<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="lars.wherehaveishit.AddShitActivity">

    <TextView
        android:id="@+id/stxt_addShitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/here_you_can_add_your_shit"
        />

    <TextView
        android:id="@+id/stxt_NameOfPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/name_of_place"
        android:layout_below="@+id/stxt_addShitText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etxt_ShitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="false"
        tools:ignore="LabelFor"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/stxt_NameOfPlace"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/stxt_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_of_place"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/etxt_ShitName"
        android:layout_centerHorizontal="true"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.5"
        android:visibility="visible"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="135dp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/stxt_Rating"
        android:layout_centerHorizontal="true"/>

    <!--suppress AndroidMissingOnClickHandler -->
    <Button
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:onClick="doneShitting"
        android:text="@string/done"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="537dp"
        />


</RelativeLayout>
